--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "wp-scripts build ./src/client.js ./src/index.js",
-    "start": "wp-scripts start ./src/client.js ./src/index.js"
+    "start": "wp-scripts start ./src/client.js ./src/index.js",
+    "dev": "npm run build && npm run start"
   },
   "repository": {
     "type": "git",
