--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@wordpress/components": "^22.0.0",
     "@wordpress/i18n": "^4.21.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.6.0"
   },
   "devDependencies": {
     "@wordpress/scripts": "^24.5.0"
