--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "wp-scripts build",
-    "start": "wp-scripts start ./src/index.js ./src/client.js",
+    "build": "wp-scripts build ./src/client.js ./src/index.js",
+    "start": "wp-scripts start ./src/client.js ./src/index.js",
     "dev": "npm run build && npm run start",
     "clean": "rm -rf build"
   },
